--- a/erupi.html
+++ b/erupi.html
@@ -1,3 +1,4 @@
+<html>
 <div class="payment-form">
 <h2>UPI Payment</h2>
 <form>
@@ -16,3 +17,5 @@
 <button type="submit">Pay Now</button>
 </form>
 </div>
+  arnav
+</html>
