--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
+<!DOCTYPE html>
 <html>
-<div class="payment-form">
-<h2>UPI Payment</h2>
-<form>
-<div class="form-group">
-<label for="mobile-number">Mobile Number:</label>
-<input type="text" id="mobile-number" required>
-</div>
-<div class="form-group">
-<label for="amount">Amount:</label>
-<input type="text" id="amount" required>
-</div>
-<div class="form-group">
-<label for="remark">Remark:</label>
-<input type="text" id="remark">
-</div>
-<button type="submit">Pay Now</button>
-</form>
-</div>
-  arnav
+<head>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+    <h2>UPI Payment</h2>
+  
+    <form>
+        <div class="form-group">
+            <label for="upiId">UPI ID:</label>
+            <input type="text" id="upiId" placeholder="Enter UPI ID" required>
+        </div>
+        <div class="form-group">
+            <label for="amount">Amount:</label>
+            <input type="number" id="amount" placeholder="Enter Amount" required>
+        </div>
+        <button type="submit">Pay</button>
+    </form>
+</body>
 </html>
